      be \code{Inf+0i}).
      
      \item \code{unzip()} and \code{unz()} connection have been updated
      with support for more recent Zip64 features (including large file
      sizes and \command{bzip2} compression, but not yet UTF-8 file
      names).

      \code{unzip()} has a new option to restore file times from those
      recorded (in an unknown timezone) in the zip file.
    }
  }

  \subsection{SWEAVE & VIGNETTES}{
    \itemize{
      \item Options \code{keep.source = TRUE, figs.only = FALSE}
      are now the default.

      \item The way the type of user-defined options is determined has
      changed.  Previously they were all regarded as logical: now the
      type is determined by the value given at first use.

      \item The allowed values of logical options are now precisely
      those allowed for character inputs to \code{as.logical()}: this
      means that \samp{t} and \samp{f} are no longer allowed (although
      \code{T} and \code{F} still are).

      \item The preferred location for vignette sources is now the
      directory \file{vignettes} and not \file{inst/doc}: \command{R CMD
      build} will now re-build vignettes in directory \file{vignettes}
      and copy the \file{.Rnw} (etc) files and the corresponding PDFs to
      \file{inst/doc}.

      \item \command{R CMD Sweave} now supports a \option{--driver}
      option to select the Sweave driver: the default is equivalent to
      \option{--driver=RweaveLatex}.

      \item \command{R CMD Sweave} and \command{R CMD Stangle} support
      \option{--encoding} and \option{--options} options.

      \item \code{Rtangle()} allows \code{output = "stdout"} or
      \code{output = "stderr"} to select the output or message
      connection.  This is convenient for scripting using something like
\preformatted{    R CMD Stangle --options='output="stdout"' foo.Rnw > foo2.R}
    }
  }

  \subsection{C-LEVEL FACILITIES}{
    \itemize{